<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".loginmain.loginActivity">

    <ImageView
        android:id="@+id/image_shixun_top"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:scaleType="fitXY"
        android:src="@drawable/dls"></ImageView>

    <LinearLayout
        android:layout_marginTop="250dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="270dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/shape_login_bkg"
            android:gravity="center_vertical"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingLeft="40dp"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/image_youghu24"></ImageView>
                <EditText
                    android:id="@+id/shixun_ed_user_dl"
                    android:layout_width="250dp"
                    android:layout_height="50dp"
                    android:hint="@string/user_hint"
                    android:inputType="text"></EditText>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:paddingLeft="40dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/image_password"></ImageView>
                <EditText
                    android:id="@+id/shixun_ed_password_dl"
                    android:layout_width="250dp"
                    android:layout_height="50dp"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"></EditText>
            </LinearLayout>
            <TextView
                android:id="@+id/tv_quzhuce"
                android:layout_gravity="right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="没账号？去注册->"
                android:textColor="#78C538"></TextView>
        </LinearLayout>
        <Button
            android:layout_width="270dp"
            android:layout_marginTop="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="25sp"
            android:onClick="onclick_shixun_login_main"
            android:background="@drawable/shape_login"></Button>
    </LinearLayout>

</RelativeLayout>