<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mainbody.Contentctivity">
    <FrameLayout
        android:layout_above="@+id/all_linearlayout"
        android:id="@+id/content_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/teal_700">
    </FrameLayout>
    
    <LinearLayout
        android:id="@+id/all_linearlayout"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/linearlayout_firstPage"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:paddingTop="10dp"
            android:orientation="vertical"
            android:background="@color/white"
            android:gravity="center"
            android:layout_height="wrap_content">
            <ImageView
                android:background="@drawable/firstimage_change"
                android:id="@+id/linearlayout_first_image"
                android:layout_width="22dp"
                android:layout_height="22dp"
                >
            </ImageView>
            <TextView
                android:textColor="@color/color_main"
                android:id="@+id/linearlayout_first_textview"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contrnt_shouye"
                android:textSize="12dp"></TextView>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linearlayout_recommentPage"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:paddingTop="10dp"
            android:orientation="vertical"
            android:background="@color/white"
            android:gravity="center"
            android:layout_height="wrap_content">
            <ImageView
                android:background="@drawable/dynamicsimage_change"
                android:id="@+id/linearlayout_recomment_image"
                android:layout_width="22dp"
                android:layout_height="22dp"
                >
            </ImageView>
            <TextView
                android:textColor="@color/color_main"
                android:id="@+id/linearlayout_recomment_textview"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contrnt_dynamics"
                android:textSize="12dp"></TextView>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linearlayout_releasePage"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:background="@color/white"
            android:gravity="center"
            android:layout_height="match_parent">
            <ImageView
                android:src="@mipmap/release"
                android:id="@+id/linearlayout_releasePage_image"
                android:layout_width="35dp"
                android:layout_height="35dp"
                >
            </ImageView>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linearlayout_messagePage"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:paddingTop="10dp"
            android:orientation="vertical"
            android:background="@color/white"
            android:gravity="center"
            android:layout_height="wrap_content">
            <ImageView
                android:background="@drawable/messageimage_change"
                android:id="@+id/linearlayout_messagePage_image"
                android:layout_width="22dp"
                android:layout_height="22dp"
                >
            </ImageView>
            <TextView
                android:textColor="@color/color_main"
                android:id="@+id/linearlayout_messagePage_textview"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="消息"
                android:textSize="12dp"></TextView>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linearlayout_mePage"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:paddingTop="10dp"
            android:orientation="vertical"
            android:background="@color/white"
            android:gravity="center"
            android:layout_height="wrap_content">
            <ImageView
                android:background="@drawable/meimage_change"
                android:id="@+id/linearlayout_mePage_image"
                android:layout_width="22dp"
                android:layout_height="22dp"
                >
            </ImageView>
            <TextView
                android:textColor="@color/color_main"
                android:id="@+id/linearlayout_mePage_textview"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contrnt_wode"
                android:textSize="12dp"></TextView>
        </LinearLayout>


    </LinearLayout>

</RelativeLayout>